Removing an HTTP test to an uncontrolled website.  Will re-implement when we have our own HTTP server
git-svn-id: http://mulgara.org/svn/mulgara/trunk@83 1b8e2379-6217-0410-9814-82e2034ecad4